--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,14 +5,14 @@
       b-slate-link
       href="https://ddiu.io" target="_blank"
     >
-      Diu
+      javastarboy
     </a>
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      href="https://github.com/javastarboy/chatgpt-vercel" target="_blank"
     >
-      Source Code
+      Source Code | QQ 交流群：797479296 | 公众号：javastarboy
     </a>
   </p>
 </footer>
