--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <span pr-1>感兴趣可以加入我们 </span>
     <a
       b-slate-link
-      href="https://github.com/javastarboy/WeChatGPT_JSB/blob/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
+      href="https://raw.githubusercontent.com/javastarboy/WeChatGPT_JSB/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
     >
       QQ 交流群：797479296
     </a>
@@ -19,7 +19,7 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://github.com/javastarboy/WeChatGPT_JSB/blob/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
+      href="https://github.com/javastarboy" target="_blank"
     >
       javastarboy
     </a>
@@ -34,7 +34,7 @@
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/javastarboy/WeChatGPT_JSB/blob/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
+      href="https://raw.githubusercontent.com/javastarboy/WeChatGPT_JSB/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
     >
       Based on OpenAI API (gpt-3.5-turbo)
     </a>
