--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,8 @@ import Themetoggle from './Themetoggle.astro'
 
 <header>
   <div class="fb items-center">
-    <Logo />
+    <!-- <Logo /> -->
+    <img src="../../public/javastarboy-绿色.png" alt="javastarboy" width="32" height="32" />
     <Themetoggle />
   </div>
   <div class="fi mt-2">
