--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import Themetoggle from './Themetoggle.astro'
 <header>
   <div class="fb items-center">
     <!-- <Logo /> -->
-    <img src="../../public/javastarboy-绿色.png" alt="javastarboy" width="32" height="32" />
+    <img src="javastarboy-绿色.png" alt="javastarboy" width="60" height="60" />
     <Themetoggle />
   </div>
   <div class="fi mt-2">
