--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://raw.githubusercontent.com/javastarboy/WeChatGPT_JSB/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
+      href="星球优惠券10 元.png" alt="星球优惠券10元" target="_blank"
     >
     感兴趣的小伙伴，欢迎加入交流社群（点我）~
     </a>
