--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,38 +3,38 @@
     <span pr-1>感兴趣可以加入我们 </span>
     <a
       b-slate-link
-      href="https://raw.githubusercontent.com/javastarboy/WeChatGPT_JSB/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
+      href="QQ 群.jpeg" alt="QQ交流群" target="_blank"
     >
       QQ 交流群：797479296
     </a>
     <span px-1> | </span>
     <a
       b-slate-link
-      href="https://mp.weixin.qq.com/s?__biz=MzI2MjYwMTA5MQ==&mid=2247483743&idx=1&sn=3c81f124692a7b5a275a6a143b1096ee&chksm=ea49e1b3dd3e68a51f54d57eebecf2d679d09b6dad1c389b2ace1cc5edc531c8a09532b60a1e&token=853919030&lang=zh_CN#rd" target="_blank"
+      href="公众号二维码.jpg" alt="公众号二维码" target="_blank"
     >
       公众号：javastarboy
     </a>
   </p>
   <p mt-2 text-xs op-30>
-    <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://github.com/javastarboy" target="_blank"
+      href="微信收款码.jpeg" alt="打赏支持" target="_blank"
     >
-      javastarboy
+      打赏
     </a>
+    
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/javastarboy/chatgpt-vercel" target="_blank"
+      href="星球优惠券10 元.png" alt="星球包教包会，10分钟部署网站" target="_blank"
     >
-      源码 
+      源码(包教包会) 
     </a>
 
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://raw.githubusercontent.com/javastarboy/WeChatGPT_JSB/master/pictures/%E4%B8%93%E9%9D%A2%E5%90%91%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%BA%BA%E5%91%98%E4%BC%98%E6%83%A0%E5%88%B8-GitHub.png" target="_blank"
+      href="星球优惠券10 元.png" alt="星球优惠券10" target="_blank"
     >
       Based on OpenAI API (gpt-3.5-turbo)
     </a>
