--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <p mt-8 text-xs op-30>
-    <span pr-1>感兴趣可以加入我们 </span>
+    <span pr-1>感兴趣可以加入我们：</span>
     <a
       b-slate-link
       href="QQ 群.jpeg" alt="QQ交流群" target="_blank"
@@ -18,19 +18,27 @@
   <p mt-2 text-xs op-30>
     <a
       b-slate-link
-      href="微信收款码.jpeg" alt="打赏支持" target="_blank"
-    >
-      打赏
-    </a>
-    
-    <span px-1>|</span>
-    <a
-      b-slate-link
       href="星球优惠券10 元.png" alt="星球包教包会，10分钟部署网站" target="_blank"
     >
       源码(包教包会) 
     </a>
 
+    <span px-1>|</span>
+     <a
+      b-slate-link
+      href="微信收款码.jpeg" alt="打赏支持" target="_blank"
+    >
+      打赏支持
+    </a>
+    
+   <span px-1>|</span>
+     <a
+      b-slate-link
+      href="微信公众号 ChatGPT 对话支持语音消息了.jpeg" alt="微信公众号也支持GPT聊天了" target="_blank"
+    >
+      公众号·GPT
+    </a>
+    
     <span px-1>|</span>
     <a
       b-slate-link
