--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 <footer>
   <p mt-8 text-xs op-30>
-    <span pr-1>感兴趣可以加入我们：</span>
+    <span pr-1>点击我们有惊喜</span>
+    <span px-1> | </span>
     <a
       b-slate-link
       href="QQ 群.jpeg" alt="QQ交流群" target="_blank"
