--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <p mt-8 text-xs op-30>
-    <span pr-1>点击我们有惊喜--></span>
+    <span pr-1 style="color:red;font-size:1.5rem;">点击我们有惊喜--></span>
     <span px-1>| </span>
     <a
       b-slate-link
