--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="星球优惠券10元" alt="星球优惠券10元" target="_blank"
+      href="星球优惠券10元.png" alt="星球优惠券10元" target="_blank"
     >
     感兴趣的小伙伴，欢迎加入交流社群（点我）~
     </a>
