--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@
   <p mt-2 text-xs op-30>
     <a
       b-slate-link
-      href="星球优惠券10元" alt="星球包教包会，10分钟部署网站" target="_blank"
+      href="星球优惠券10元.png" alt="星球包教包会，10分钟部署网站" target="_blank"
     >
       源码(包教包会) 
     </a>
@@ -43,7 +43,7 @@
     <span px-1>|</span>
     <a
       b-slate-link
-      href="星球优惠券10元" alt="星球优惠券10" target="_blank"
+      href="星球优惠券10元.png" alt="星球优惠券10" target="_blank"
     >
       Based on OpenAI API (gpt-3.5-turbo)
     </a>
