--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,4 +48,12 @@
       Based on OpenAI API (gpt-3.5-turbo)
     </a>
   </p>
+  <p mt-2 text-xs op-30>
+    <a
+      b-slate-link
+      href="星球优惠券10元.png" alt="星球优惠券10" target="_blank"
+    >
+      免费开放不易，这个工具每天为大家提供服务都要消耗 6$ 成本，如果可以给个赞助吧，感谢~
+    </a>
+  </p>
 </footer>
