--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,4 +21,12 @@ import Themetoggle from './Themetoggle.astro'
     感兴趣的小伙伴，欢迎加入交流社群（点我）~
     </a>
   </p>
+  <p mt-1 op-60>
+    <a
+      b-slate-link
+      href="公众号二维码.png" alt="公众号二维码" target="_blank"
+    >
+    微信公众号也集成了ChatGPT，支持文本、语音提问，快来试试吧~
+    </a>
+  </p>
 </header>
