--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,9 +24,9 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="公众号二维码.png" alt="公众号二维码" target="_blank"
+      href="公众号二维码.jpg" alt="公众号二维码" target="_blank"
     >
-    微信公众号也集成了ChatGPT，支持文本、语音提问，快来试试吧~
+    公众号也集成了GPT，支持文本、语音提问，快来试试吧~
     </a>
   </p>
 </header>
