--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,12 +8,12 @@
     >
       QQ 交流群：797479296
     </a>
-    <span px-1> | </span>
-    <a
+    <span px-1>|</span>
+     <a
       b-slate-link
-      href="公众号二维码.jpg" alt="公众号二维码" target="_blank"
+      href="微信公众号 ChatGPT 对话支持语音消息了.jpeg" alt="微信公众号也支持GPT聊天了" target="_blank"
     >
-      公众号：javastarboy
+      公众号·GPT效果
     </a>
   </p>
   <p mt-2 text-xs op-30>
@@ -30,14 +30,6 @@
       href="微信收款码.jpeg" alt="打赏支持" target="_blank"
     >
       打赏支持
-    </a>
-    
-   <span px-1>|</span>
-     <a
-      b-slate-link
-      href="微信公众号 ChatGPT 对话支持语音消息了.jpeg" alt="微信公众号也支持GPT聊天了" target="_blank"
-    >
-      公众号·GPT
     </a>
     
     <span px-1>|</span>
