--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@
   <p mt-2 text-xs op-30>
     <a
       b-slate-link
-      href="星球优惠券10元.png" alt="星球包教包会，10分钟部署网站" target="_blank"
+      href="宣传海报.png" alt="星球包教包会，10分钟部署网站" target="_blank"
     >
       源码(包教包会) 
     </a>
@@ -27,9 +27,9 @@
     <span px-1>|</span>
      <a
       b-slate-link
-      href="微信收款码.jpeg" alt="打赏支持" target="_blank"
+      href="星球课程持续更新中.jpg" alt="星球课程持续更新中" target="_blank"
     >
-      打赏支持
+      课程示例（每日更新）
     </a>
     
     <span px-1>|</span>
@@ -43,7 +43,7 @@
   <p mt-2 text-xs op-30>
     <a
       b-slate-link
-      href="星球优惠券10元.png" alt="星球优惠券10" target="_blank"
+      href="微信收款码.jpeg" alt="打赏支持" target="_blank"
     >
       免费开放不易，这个工具每天为大家提供服务都要消耗 6$ 成本，如果可以给个赞助吧，感谢~
     </a>
