--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,7 @@
     <span px-1>|</span>
      <a
       b-slate-link
-      href="星球课程持续更新中.jpg" alt="星球课程持续更新中" target="_blank"
+      href="星球课程持续更新中.jpeg" alt="星球课程持续更新中" target="_blank"
     >
       课程示例（每日更新）
     </a>
