--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@
     <span px-1>| </span>
     <a
       b-slate-link
-      href="QQ 群.jpeg" alt="QQ交流群" target="_blank"
+      href="微信交流群.png" alt="微信交流群" target="_blank"
     >
-      QQ 交流群：797479296
+      微信交流群（点我进AI2.0实验室）
     </a>
     <span px-1>|</span>
      <a
