--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://mp.weixin.qq.com/s/sAVnzvxKYgA4YWaToqSwSg" alt="宣传海报" target="_blank"
+      href="https://mp.weixin.qq.com/s/sAVnzvxKYgA4YWaToqSwSg" target="_blank"
     >
     感兴趣的小伙伴，欢迎加入交流社群（点我）~
     </a>
@@ -24,7 +24,7 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="公众号二维码.jpg" alt="公众号二维码" target="_blank"
+      href="公众号二维码.jpg" target="_blank"
     >
     公众号也集成了GPT，支持文本、语音提问，快来试试吧~
     </a>
@@ -32,9 +32,10 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="公众号二维码.jpg" alt="公众号二维码" target="_blank"
+      href="https://www.javastarboy.com.cn/" target="_blank"
+      style="color: red; text-decoration: none; font-size: 1.2rem;"
     >
-    本站升级版欢迎体验（内置prompt、参数设定、GPT4模型也即将上线）
+    本站·升级版·欢迎体验【内置prompt、参数设定、GPT4模型也即将上线】
     </a>
   </p>
 </header>
