--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,9 +33,18 @@ import Themetoggle from './Themetoggle.astro'
     <a
       b-slate-link
       href="https://www.javastarboy.com.cn/" target="_blank"
-      style="color: red; text-decoration: none; font-size: 1.2rem;"
+      style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
-    本站·升级版·欢迎体验【内置prompt、参数设定、GPT4模型也即将上线】
+    升级版·点击体验【内置GPT4模型、prompt、参数设定】
+    </a>
+  </p>
+  <p mt-1 op-60>
+    <a
+      b-slate-link
+      href="人工智能变现学院618钜惠.png" target="_blank"
+      style="color: red; text-decoration: none; font-size: 1.0rem;"
+    >
+    人工智能变现学院618活动钜惠，不容错过！
     </a>
   </p>
 </header>
