--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ import Themetoggle from './Themetoggle.astro'
       b-slate-link
       href="https://mp.weixin.qq.com/s/sAVnzvxKYgA4YWaToqSwSg" target="_blank"
     >
-    感兴趣的小伙伴，欢迎加入交流社群（点我）~
+    感兴趣小伙伴欢迎「点我」加入交流社群
     </a>
   </p>
   <p mt-1 op-60>
@@ -26,7 +26,7 @@ import Themetoggle from './Themetoggle.astro'
       b-slate-link
       href="公众号二维码.jpg" target="_blank"
     >
-    公众号也集成了GPT，支持文本、语音提问，快来试试吧~
+    公众号也集成了GPT，支持文本、语音提问及查询key余额，快来试试吧~
     </a>
   </p>
   <p mt-1 op-60>
@@ -41,10 +41,19 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="人工智能变现学院618钜惠.png" target="_blank"
+      href="https://mp.weixin.qq.com/s/u-xqHwmT39nFnhhVVq-Wlg" target="_blank"
       style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
     人工智能变现学院618活动钜惠，不容错过！
+    </a>
+  </p>
+  <p mt-1 op-60>
+    <a
+      b-slate-link
+      href="https://mp.weixin.qq.com/s/1uxyZh3K-DgGIeIHS0Pltw" target="_blank"
+      style="color:blueviolet; text-decoration: none; font-size: 1.0rem;"
+    >
+    因免费动了同行蛋糕，网站可能随时被封，建议加微信进群，及时获取最新网址~
     </a>
   </p>
 </header>
