--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,12 +7,14 @@ import Themetoggle from './Themetoggle.astro'
   <div class="fb items-center">
     <!-- <Logo /> -->
     <img src="javastarboy-绿色.png" alt="javastarboy" width="75" height="65" />
+    <span class="gpt-title fi mt-2">ChatGPT</span>
+    <span class="gpt-subtitle fi mt-2">Javastarboy</span>
     <Themetoggle />
   </div>
-  <div class="fi mt-2">
+  <!-- <div class="fi mt-2">
     <span class="gpt-title">ChatGPT</span>
     <span class="gpt-subtitle">Javastarboy</span>
-  </div>
+  </div> -->
   <p mt-1 op-60>
     <a
       b-slate-link
