--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,14 +7,12 @@ import Themetoggle from './Themetoggle.astro'
   <div class="fb items-center">
     <!-- <Logo /> -->
     <img src="javastarboy-绿色.png" alt="javastarboy" width="75" height="65" />
-    <span class="gpt-title fi mt-2">ChatGPT</span>
-    <span class="gpt-subtitle fi mt-2">Javastarboy</span>
     <Themetoggle />
   </div>
-  <!-- <div class="fi mt-2">
+  <div class="fi mt-2">
     <span class="gpt-title">ChatGPT</span>
     <span class="gpt-subtitle">Javastarboy</span>
-  </div> -->
+  </div>
   <p mt-1 op-60>
     <a
       b-slate-link
@@ -46,7 +44,7 @@ import Themetoggle from './Themetoggle.astro'
       href="https://mp.weixin.qq.com/s/u-xqHwmT39nFnhhVVq-Wlg" target="_blank"
       style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
-    人工智能变现学院618活动钜惠，不容错过！
+    618活动钜惠，送120刀api_key！
     </a>
   </p>
   <p mt-1 op-60>
@@ -55,8 +53,7 @@ import Themetoggle from './Themetoggle.astro'
       href="https://mp.weixin.qq.com/s/1uxyZh3K-DgGIeIHS0Pltw" target="_blank"
       style="color:blueviolet; text-decoration: none; font-size: 1.0rem;"
     >
-    因免费动了同行蛋糕，网站可能随时被封，建议加微信进群，及时获取最新网址~
+    因免费动了同行蛋糕，网站可能随时被封，建议加微信进群，及时获取最新网址
     </a>
   </p>
-  <br>
 </header>
