--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@
       b-slate-link
       href="星球优惠券10元.png" alt="星球优惠券10" target="_blank"
     >
-      Based on OpenAI API (gpt-3.5-turbo)
+      Based on OpenAI API (gpt-3.5-turbo-0613)
     </a>
   </p>
   <p mt-2 text-xs op-30>
