--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,10 +41,10 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://mp.weixin.qq.com/s/u-xqHwmT39nFnhhVVq-Wlg" target="_blank"
+      href="https://www.jsbcp.cn/2023暑期钜惠.png" target="_blank"
       style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
-    618活动钜惠，送120刀api_key！
+    2023暑期特惠，送120刀api_key！
     </a>
   </p>
   <p mt-1 op-60>
