--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,13 +44,13 @@ import Themetoggle from './Themetoggle.astro'
       href="2023暑期钜惠.png" target="_blank"
       style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
-    2023暑期特惠，送120刀api_key！
+    2023暑期特惠，另赠ChatGPT-4使用权限！
     </a>
   </p>
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://mp.weixin.qq.com/s/1uxyZh3K-DgGIeIHS0Pltw" target="_blank"
+      href="https://mp.weixin.qq.com/s/ME7dOzUaN8XVk7vwx62rgw" target="_blank"
       style="color:blueviolet; text-decoration: none; font-size: 1.0rem;"
     >
     因免费动了同行蛋糕，网站可能随时被封，建议加微信进群，及时获取最新网址
