--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://mp.weixin.qq.com/s/7rEZNtEPSdtwySki_pvPDw" target="_blank"
+      href="https://ydyrb84oyc.feishu.cn/wiki/Vxg8wAFUti3VAhksSyLc4AD3n8g" target="_blank"
     >
     感兴趣小伙伴欢迎「点我」加入交流社群
     </a>
@@ -32,7 +32,7 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://www.javastarboy.com.cn/" target="_blank"
+      href="https://www.jsbcp-1.top/" target="_blank"
       style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
     升级版·点击体验【内置GPT4模型、prompt、参数设定】
@@ -41,16 +41,16 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="2023暑期钜惠.png" target="_blank"
+      href="https://ydyrb84oyc.feishu.cn/wiki/Np2awexxvibTkdklALycZQmDnoe" target="_blank"
       style="color: red; text-decoration: none; font-size: 1.0rem;"
     >
-    2023暑期特惠，另赠ChatGPT-4使用权限！
+    GPT4.0 转发api出售（含网站，招代理）
     </a>
   </p>
   <p mt-1 op-60>
     <a
       b-slate-link
-      href="https://mp.weixin.qq.com/s/ME7dOzUaN8XVk7vwx62rgw" target="_blank"
+      href="https://www.jsbcp-1.top/%E5%BE%AE%E4%BF%A1%E4%BA%A4%E6%B5%81%E7%BE%A4.png" target="_blank"
       style="color:blueviolet; text-decoration: none; font-size: 1.0rem;"
     >
     因免费动了同行蛋糕，网站可能随时被封，建议加微信进群，及时获取最新网址
